# fastapi_boilerplate

./: .gitignore  README.md  pyproject.toml  setup.sh
app/: main.py
app/config/: logging_config.py  settings.py
app/db/: base.py
app/models/: item.py  user.py
app/routes/: auth.py  items.py  users.py
app/schemas/: item.py  user.py
